@@ -72,9 +72,9 @@ def getDictFromTree(tree):
 		if ret_dict.has_key(child.tag):
 			if not type(ret_dict[child.tag]) == list:
 				ret_dict[child.tag] = [ret_dict[child.tag]]
-			ret_dict[child.tag].append(child.text)
+			ret_dict[child.tag].append(child.text or "")
 		else:
-			ret_dict[child.tag] = child.text
+			ret_dict[child.tag] = child.text or ""
 	return ret_dict
 
 def getTextFromXml(xml, xpath):
